--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <ul id='minhaUl'>
                 <li role="presentation" class="buttonMenu" ng-class="{'active': $ctrl.isActive('/home')}"><a href="#!home"
-                        ng-click="limparQuadrinhos()">Início</a></li>
+                        ng-click="limparInput()">Início</a></li>
                 <li role="presentation" class="buttonMenu" ng-class="{'active': $ctrl.isActive('/herois')}"><a href="#!herois">Heróis</a>
                 </li>
             </ul>
